# monthly-salary-cat-desktop

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  启动月薪喵.vbs
.github/workflows/: windows-build.yml
docs/: README.md  docker-cheatsheet.md  overview.md
docs/modules/animation-data/: implementation.md  principle.md
docs/modules/frontend-pet/: implementation.md  principle.md
docs/modules/mail/: distribution-update-2026-06-23.md  implementation.md  principle.md
docs/modules/news/: implementation.md  principle.md
docs/modules/reading/: implementation.md  principle.md
docs/modules/tauri-shell/: implementation.md  principle.md
docs/modules/translation/: implementation.md  principle.md
scripts/: desktop-web-server.cjs  repair-rust-and-run.ps1  start-background.ps1  stop-background.ps1  tauri-build.cmd  tauri-dev.cmd
src/: App.vue  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  mail.local.example.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/animation/: catAnimation.ts
src/components/: SalaryCat.vue
src/data/: quotes.ts
src/news/: newsHelper.ts
src/reading/: readingHelper.ts
src/translation/: translationHelper.ts
