[package]
name = "monthly-salary-cat"
version = "0.1.0"
description = "月薪喵桌面宠物"
authors = ["monthly-salary-cat"]
edition = "2021"

[lib]
name = "monthly_salary_cat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-single-instance = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
native-tls = "0.2"
mailparse = "0.15"
